--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* CSS file for stylinh */
+/* CSS file for styling */
 
 :root {
   --primaryBlue: #004a80;
@@ -9,6 +9,16 @@
   --gradientGray: #e6e6e6;
   --buttonNotHovered: #f2da56;
   --errorColor: #dc0015;
+}
+
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  margin: 0;
+}
+main {
+  flex: 1;
 }
 
 .primaryBlue {
@@ -62,9 +72,10 @@
   background-color: var(--primaryYellow);
 }
 
-. #footerPlaceHolder {
+#footerPlaceHolder {
   padding-top: 20px;
   padding-bottom: 20px;
+  bottom: 0%;
 }
 
 /* Used to align different html element on the same line */
@@ -103,7 +114,44 @@
   margin: 0 auto;
 }
 
+/* Customized jquery validator color style */
 .error {
   color: var(--defaultWhite);
   background-color: var(--errorColor);
+}
+
+/* Loading modal style */
+#modal {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+/* Used to center the modal loading gif */
+.center {
+  z-index: 1000;
+  margin: 300px auto;
+  padding: 10px;
+  width: 130px;
+  background-color: White;
+  border-radius: 10px;
+  filter: alpha(opacity=100);
+  opacity: 1;
+  -moz-opacity: 1;
+}
+.center img {
+  height: 128px;
+  width: 128px;
+}
+
+.center h5 {
+  color: var(--primaryBlue);
+  padding-top: 10px;
+  width: fit-content;
+  height: 128px;
+  text-align: center;
 }
